Ensure the Language label is visible
[#118828107]

--- a/orb/static/orb/style.css
+++ b/orb/static/orb/style.css
@@ -426,7 +426,7 @@ div.profile {
 .navbar-language {
     float: right;
     margin-right: 20px;
-    color: white;
+    color: white !important;
     font-weight: bold;
 }
 
